z-index and position relative on card to fix box-shadow issue

--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -4,4 +4,6 @@
   border-radius: $border-radius-three;
   box-shadow: 0 1px 4px 0 rgba(51, 71, 86, 0.4);
   padding: 1rem;
+  position: relative;
+  z-index: 2;
 }
